# autovault

./: .gitignore  Cargo.toml
prompts/: compile_merge.md  compile_note.md  conflict_check.md  index_top.md  index_topic.md  lint_check.md  qa_review.md
src/: cli.rs  collect.rs  compile.rs  config.rs  conflicts.rs  index.rs  lint.rs  logging.rs  main.rs  manifest.rs  parser.rs  pipeline.rs  prompts.rs  qa.rs  utils.rs  vault.rs
src/llm/: cli_backend.rs  mod.rs
tests/: test_e2e.rs
