[package]
name = "autovault"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.5.23", features = ["derive"] }
tokio = { version = "=1.37.0", features = ["full"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
serde_yaml = "=0.9.34"
sha2 = "=0.10.8"
chrono = { version = "=0.4.38", features = ["serde"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["json"] }
tempfile = "=3.12.0"
anyhow = "=1.0.89"
regex = "=1.10.6"
async-trait = "=0.1.82"

[dev-dependencies]
tempfile = "=3.12.0"
tokio-test = "=0.4.3"
